Adjust linter rules

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,6 @@
 newlines.alwaysBeforeElseAfterCurlyIf = true
-align.tokens.add = [{code = "%"}, {code = "%%"}]
+align.tokens.add = [{code = "%"}, {code = "%%"}, {code = "<-"}]
+align.openParenCallSite = false
+align.openParenDefnSite = false
+includeCurlyBraceInSelectChains = false
+newlines.penalizeSingleSelectMultiArgList = false
